src/index.css
/* Theme colors */
:root {
  --dark-accent: #85618f;
  --dark-bg: #0e142b;
  --footer-height: 50px;
  --header-height: 130px;
  --light-bg: #f5f4ee;
  --primary: 135, 34, 237;
}

* {
  box-sizing: border-box;
  font-family: Arial, Helvetica, sans-serif;
  margin: 0;
  padding: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

body, dialog {
  background-color: var(--light-bg);
  color: var(--dark-bg);
}

button {
  background-color: rgb(var(--primary));
  border: none;
  border-radius: 5px;
  color: var(--light-bg);
  padding: 12px 32px;
  transition: all 0.2s;
}

button:hover,
button:active,
button:focus {
  background-color: #4a1284;
  cursor: pointer;
}

footer {
  height: var(--footer-height);
  padding: 15px;
  text-align: center;
  width: 100%;
}

form {
  display: flex;
  flex-direction: column;
}

form label, form input, form select {
  margin-top: 15px;
}

input,
select {
  padding: 15px;
}

header {
  min-height: var(--header-height);
  position: sticky;
  top: 0;
  z-index: 9999;
}
header a:has(h3) {
  display: inline-block;
  width: 100%;
}

header > div {
  display: flex;
  align-items: baseline;
}

#app > header {
  background-color: rgba(var(--primary), 0.7);
  backdrop-filter: blur(3px);
  box-shadow: 0 0 5px var(--dark-bg);
  display: flex;
  flex-direction: column;
  min-height: 50px;
  padding-block-end: 10px;
  width: 100%;
}

main {
  min-height: calc(100vh - var(--header-height) - var(--footer-height));
  padding: 15px;
}

nav ul {
  list-style: none;
}

nav a {
  display: inline-block;
  width: 100%;
}

table {
  border-collapse: collapse;
  margin-top: 15px;
  margin-bottom: 15px;
  width: 100%;
}

thead {
  border-bottom: 2px solid var(--dark-accent);
}

td,
th {
  border: none;
  padding: 8px;
}

th {
  padding-top: 12px;
  padding-bottom: 12px;
  text-align: left;
}

.accountHeading {
  align-items: center;
  display: flex;
}

h1,
.accountNameUpdateInput {
  margin: 0;
  padding: 0;
  font-size: 2em;
  font-weight: bold;
}

.accounts {
  display: flex;
  flex-wrap: wrap;
  margin-top: 25px;
}

.amountInputWithIcon {
  display: flex;
  align-items: center;
  margin: 0;
}
.amountInputWithIcon svg {
  margin-right: 10px;
}
.amountInputWithIcon input {
  flex-grow: 1;
}

.auth-container {
  justify-content: center;
}

.btn {
  cursor: pointer;
  margin: 0 10px;
}

.btnGroup {
  display: flex;
  justify-content: space-between;
  padding-block-start: 15px;
}

.btnGroup button,
.btnGroup a button {
  width: 47.5%;
}

.card {
  border: 1px solid rgb(var(--primary));
  border-radius: 15px;
  height: 250px;
  margin: 0 25px 25px 0;
  transition: all 0.2s;
  width: 250px;
}

.card main {
  margin-bottom: 0;
  min-height: 75%;
  padding: 15px;
}

.card header {
  border-radius: 15px 15px 0 0;
  min-height: 25%;
  padding: 15px 0;
  position: relative;
  text-align: center;
  z-index: 0;
}

.card header h2 {
  font-weight: normal;
}

.header-item {
  text-align: center;
  width: 100%;
}
.header-item a {
  padding: 10px;
}
.header-item a:hover {
  background-color: rgba(0, 0, 0, 0.5);
}

.hidden {
  display: none;
}

.modal {
  border: none;
  height: 100%;
  max-height: 100%;
  max-width: 100%;
  padding: 15px;
  width: 100%;
}

.transDate, .transBalance {
  color: rgb(122, 122, 122);
  font-style: italic;
  font-size: 0.7rem;
}

#addAccountBtn {
  background-color: transparent;
  border: 5px dashed rgb(var(--primary));
  border-radius: 15px;
  color: var(--dark-bg);
  font-size: 2em;
  height: 250px;
  margin: 0 25px 25px 0;
  padding: 15px;
  width: 250px;
}

.card:hover,
.card:active,
.card:focus,
#addAccountBtn:hover,
#addAccountBtn:active,
#addAccountBtn:focus {
  background-color: rgba(0, 0, 0, 0.2);
}

#greeting {
  display: inline-block;
  margin-right: 15px;
}

@media screen and (min-width: 768px) {
  :root {
    --header-height: 50px;
  }
  nav ul {
    width: auto;
  }
  nav a {
    display: inline;
  }
  .auth-container {
    justify-content: flex-end;
    padding-inline-end: 10px;
  }
  .header-item a:has(h3) {
    display: inline;
    width: auto;
  }
  .modal {
    border-radius: 15px;
    margin: 5vh auto;
    width: 50%;
    max-height: 90vh;
  }
  .modal::backdrop {
    background-color: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(3px);
    height: 100%;
    left: 0;
    overflow: auto;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1;
  }
  #app > header {
    align-items: center;
    flex-direction: row;
    padding-block-end: 0;
  }
}

@media (prefers-color-scheme: dark) {
  body, dialog {
    background-color: var(--dark-bg);
    color: var(--light-bg);
  }
  thead {
    border-bottom-color: var(--dark-accent);
  }
  .card,
  #addAccountBtn {
    color: var(--light-bg);
  }
  .card:hover,
  .card:active,
  .card:focus,
  #addAccountBtn:hover,
  #addAccountBtn:active,
  #addAccountBtn:focus {
    background-color: rgba(255, 255, 255, 0.2);
  }
  .modal::backdrop {
    background-color: rgba(255, 255, 255, 0.5);
  }
}

